@@ -1,0 +1,27 @@
+/*
+ * Created on 4 Jun 2008
+ * Created by Allan Crooks
+ * Copyright (C) 2008 Vuze Inc., All Rights Reserved.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ */
+package org.gudy.azureus2.plugins.ui.menus;
+
+/**
+ * An object to be used with {@link MenuManager#addMenuItem(MenuItemContext, String)}.
+ * 
+ * <p><b>Note:</b> Only for implementation by Azureus, not plugins.</p>
+ * @since 3.0.5.3
+ */
+public interface MenuContext {	
+}
